pruebas sobre componentes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,6 +15,9 @@
       <li>
         <a routerLink="/pico-preview">Pico Preview</a>
       </li>
+      <li>
+        <a routerLink="/others">Others</a>
+      </li>
     </ul>
   </nav>
 </header>
